M VBM8-Manual.pdf M tbx_cfg_vbm8.m M cg_vbm8_write.m M VBM8-Manual.doc M cg_vbm8_run.m

(1) Weighting for MRF and ORNLM can now be selected in the GUI. This will solve
    some problems with batch files, where changes of these parameters were not 
    considered (thanks to Jose Manjon for pointing to that issue).
(2) VBM8-Manual is also updated to describe the weighting parameters.
------------------------------------------------------------------------
r331 | gaser | 2010-05-15 03:00:51

M       cg_vbm8_update.m
M       cg_vbm8_write.m

(1) Update function now clears the toolbox cache and refreshes function 
    and file system caches.
(2) Reordered some parameter initializations in cg_vbm8_write to save 
    memory.
------------------------------------------------------------------------
r332 | gaser | 2010-05-17 22:56:55

M      cg_vbm8_batch.sh
M      tbx_cfg_vbm8.m
M      cg_vbm8_batch.m
M      cg_vbm8_tools.m
M      cg_vbm8_write.m
M      cg_spmT2x.m
M      cg_noise_estimation.m

(1) Added calculation of peak SNR to cg_noise_estimate.m.
(2) Option for non-stationary cluster extent correction now depends on 
    selection of cluster threshold.
(3) Added check for empty indices to cg_spmT2x.m.
(4) Added flag "-d" to cg_vbm8_batch.sh to define your own vbm8_defaults
    file.
------------------------------------------------------------------------
r333 | gaser | 2010-05-18 16:10:35

A      upfirdn2dMex.c
A      upfirdn2dMex.m
A      upfirdn2dMex.mexmaci64
A      afb3D.m
A      upfirdn2dMex.mexa64
A      dwt3D.m
A      upfirdn2dMex.mexw64
A      kmeans3D.m
A      farras.m
A      upfirdn2dMex.mexw32
A      cshift3D.m
A      upfirdn2dMex.mexglx
A      upfirdn2dMex.mexmaci
M      cg_vbm8_write.m
M      cg_noise_estimation.m

(1) Noise estimation is now based on wavelet method of Coupe et al. 
    Med Image Anal. 2010, that is more robust. Many files were added to
    provide 3D discrete wavelet transformation.
(2) Added calculation of SNR and CNR to cg_vbm8_write.m.